@@ -1,34 +1,31 @@
 package jp.uich.config;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
-
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.module.SimpleModule;
+import com.fasterxml.jackson.dataformat.csv.CsvMapper;
+import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import jp.uich.databind.SampleSerializers;
+import jp.uich.databind.annotation.JsonFlatMixinFor;
+import jp.uich.http.MappingJackson2CsvHttpMessageConverter;
 import org.reflections.Reflections;
-import org.springframework.boot.autoconfigure.web.HttpMessageConverters;
+import org.springframework.boot.autoconfigure.http.HttpMessageConverters;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.MediaType;
 import org.springframework.http.converter.json.Jackson2ObjectMapperBuilder;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.module.SimpleModule;
-import com.fasterxml.jackson.dataformat.csv.CsvMapper;
-import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
-
-import jp.uich.databind.SampleSerializers;
-import jp.uich.databind.annotation.JsonFlatMixinFor;
-import jp.uich.http.MappingJackson2CsvHttpMessageConverter;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Configuration
 public class Config {
 
   @Bean
   CsvMapper csvMapper() {
-    CsvMapper csvMapper = new CsvMapper();
+    var csvMapper = new CsvMapper();
     csvMapper.setMixIns(this.flatterMap());
 
     csvMapper.registerModule(new SimpleModule() {
@@ -43,39 +40,39 @@ public class Config {
 
   Map<Class<?>, Class<?>> flatterMap() {
     return new Reflections("jp.uich.databind.mixin").getTypesAnnotatedWith(JsonFlatMixinFor.class)
-      .stream()
-      .collect(Collectors.toMap(
-        type -> type.getAnnotation(JsonFlatMixinFor.class).value(), Function.identity()));
+        .stream()
+        .collect(Collectors.toMap(
+            type -> type.getAnnotation(JsonFlatMixinFor.class).value(), Function.identity()));
   }
 
   @Bean
   HttpMessageConverters converters() {
-    return new HttpMessageConverters(false, Arrays.asList(
-      this.jsonConverter(),
-      this.yamlConverter(),
-      this.csvConverter()));
+    return new HttpMessageConverters(false, List.of(
+        this.jsonConverter(),
+        this.yamlConverter(),
+        this.csvConverter()));
   }
 
   @Bean
   MappingJackson2HttpMessageConverter jsonConverter() {
     return new MappingJackson2HttpMessageConverter(
-      Jackson2ObjectMapperBuilder.json()
-        .indentOutput(true)
-        .build());
+        Jackson2ObjectMapperBuilder.json()
+            .indentOutput(true)
+            .build());
   }
 
   @Bean
   MappingJackson2HttpMessageConverter yamlConverter() {
-    MappingJackson2HttpMessageConverter yamlConverter = new MappingJackson2HttpMessageConverter(
-      new ObjectMapper(new YAMLFactory()));
-    yamlConverter.setSupportedMediaTypes(Collections.singletonList(MediaType.parseMediaType("application/yaml")));
+    var yamlConverter = new MappingJackson2HttpMessageConverter(
+        new ObjectMapper(new YAMLFactory()));
+    yamlConverter.setSupportedMediaTypes(List.of(MediaType.parseMediaType("application/yaml")));
     return yamlConverter;
   }
 
   @Bean
   MappingJackson2CsvHttpMessageConverter csvConverter() {
-    MappingJackson2CsvHttpMessageConverter converter = new MappingJackson2CsvHttpMessageConverter(this.csvMapper());
-    converter.setSupportedMediaTypes(Collections.singletonList(MediaType.parseMediaType("text/csv")));
+    var converter = new MappingJackson2CsvHttpMessageConverter(this.csvMapper());
+    converter.setSupportedMediaTypes(List.of(MediaType.parseMediaType("text/csv")));
     converter.setPrintHeader(true);
     return converter;
   }
